# cmd-stack

./: .gitignore  Cargo.toml  LICENSE  README.md  development.md  package-lock.json
.github/workflows/: all-release.yml  release.yml  rust.yml  test-cli.yml  ui-release.yml
Backend/src/: cmd.rs  dal.rs
cli/: Cargo.toml  LICENSE  cmdstack.db  example_commands.txt  go.mod  go.sum  main.go
cli/cmd/: add.go  cmd.go  delete.go  list.go  root.go  search.go  searchUtil.go  update.go
cli/dal/: command.go  dal.go  parameter.go
cli/src/: add.rs  add_command.rs  args.rs  config.rs  delete_command.rs  import_export.rs  list_commands.rs  main.rs  outputs.rs  search_command.rs  search_utils.rs  update_command.rs  utils.rs
cli/src/command/: add_command.rs  config_command.rs  delete_command.rs  list_commands.rs  mod.rs  search_command.rs  search_utils.rs  update_command.rs
cli/src/handlers/: add.rs  cli_prompter.rs  config.rs  delete.rs  export.rs  import.rs  mod.rs  search.rs  update.rs
cli/src/import_export/: export.rs  mod.rs
cli/src/param/: add_param.rs  delete_param.rs  list_param.rs  mod.rs  param_list.rs  param_utils.rs  update_param.rs
cli/tests/: cli.rs
data/: .gitignore  Cargo.toml  cmdstack_db.db
data/src/: lib.rs  main.rs  models.rs
data/src/dal/: mod.rs  sqlite.rs  sqlite_dal.rs
frontend/: package-lock.json  package.json
frontend/public/: electron.js
frontend/src/: App.tsx  ColorPalette.scss  Home.tsx  SideBar.tsx  Sidebar.scss
gui/: package-lock.json  package.json  pnpm-lock.yaml
gui/src-tauri/: Cargo.toml  tauri.conf.json
logic/: Cargo.toml
logic/src/: command.rs  config.rs  import_export.rs  lib.rs  main.rs  param.rs
logic/src/parameters/: blank.rs  boolean.rs  int.rs  mod.rs  parser.rs  populator.rs  string.rs  uuid.rs
sample_stacks/: demo.json  no_parameters.json  parameters.json
setup_txt/: example_inserts.txt
src/: command_line_parser.rs  main.rs
ui/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  data.tsx  index.css  main.tsx  page.tsx  use-command.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: CommandList.tsx  account-switcher.tsx  add-dialog.tsx  add-form.tsx  command.tsx  (+19 more)
(+10 files in other folders)
