[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
sea-query = { version = "0.30.7", features = ["thread-safe", "backend-sqlite"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"
serde = "1.0.204"
dirs = "5.0.1"
tokio = { version = "1", features = ["full"] }
