[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }
fuzzy-matcher = "0.3.7"
log = "0.4.22"
rand = "0.8.5"
rand_regex = "0.17.0"
regex-syntax = "0.8.4"
serde = "1.0.204"
serde_json = "1.0.120"
tempfile = "3.10.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
